trunk/Archive2/b3/049f57906b3247/output
main.cpp:26:2: error: static_assert failed "fail"
        static_assert (a != b, "fail");
        ^              ~~~~~~
1 error generated.
